test/Fail/MalformedModuleNameInIMPORT.agda
module MalformedModuleNameInIMPORT where

{-# IMPORT m #-}
